--- a/simpleBMH.ioc
+++ b/simpleBMH.ioc
@@ -50,79 +50,57 @@ DSIHOST_D1N.Mode=DSIHost_Adapted_TE
 DSIHOST_D1N.Signal=DSIHOST_D1N
 DSIHOST_D1P.Mode=DSIHost_Adapted_TE
 DSIHOST_D1P.Signal=DSIHOST_D1P
-Dma.ADC1.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.ADC1.2.Instance=DMA2_Stream0
-Dma.ADC1.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.2.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.2.Mode=DMA_NORMAL
-Dma.ADC1.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC1.2.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.2.Priority=DMA_PRIORITY_LOW
-Dma.ADC1.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.ADC2.3.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC2.3.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.ADC2.3.Instance=DMA2_Stream2
-Dma.ADC2.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC2.3.MemInc=DMA_MINC_ENABLE
-Dma.ADC2.3.Mode=DMA_NORMAL
-Dma.ADC2.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC2.3.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC2.3.Priority=DMA_PRIORITY_LOW
-Dma.ADC2.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.I2C1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.I2C1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.I2C1_RX.0.Instance=DMA1_Stream0
-Dma.I2C1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.I2C1_RX.0.Mode=DMA_NORMAL
-Dma.I2C1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.I2C1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.I2C1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.I2C1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.I2C1_TX.1.Instance=DMA1_Stream6
-Dma.I2C1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C1_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.I2C1_TX.1.Mode=DMA_NORMAL
-Dma.I2C1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C1_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.I2C1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.Request0=I2C1_RX
-Dma.Request1=I2C1_TX
-Dma.Request2=ADC1
-Dma.Request3=ADC2
-Dma.Request4=SDIO_RX
-Dma.Request5=SDIO_TX
-Dma.RequestsNb=6
-Dma.SDIO_RX.4.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SDIO_RX.4.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.SDIO_RX.4.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.SDIO_RX.4.Instance=DMA2_Stream3
-Dma.SDIO_RX.4.MemBurst=DMA_MBURST_INC4
-Dma.SDIO_RX.4.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.SDIO_RX.4.MemInc=DMA_MINC_ENABLE
-Dma.SDIO_RX.4.Mode=DMA_PFCTRL
-Dma.SDIO_RX.4.PeriphBurst=DMA_PBURST_INC4
-Dma.SDIO_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.SDIO_RX.4.PeriphInc=DMA_PINC_DISABLE
-Dma.SDIO_RX.4.Priority=DMA_PRIORITY_LOW
-Dma.SDIO_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.SDIO_TX.5.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SDIO_TX.5.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.SDIO_TX.5.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.SDIO_TX.5.Instance=DMA2_Stream6
-Dma.SDIO_TX.5.MemBurst=DMA_MBURST_INC4
-Dma.SDIO_TX.5.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.SDIO_TX.5.MemInc=DMA_MINC_ENABLE
-Dma.SDIO_TX.5.Mode=DMA_PFCTRL
-Dma.SDIO_TX.5.PeriphBurst=DMA_PBURST_INC4
-Dma.SDIO_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.SDIO_TX.5.PeriphInc=DMA_PINC_DISABLE
-Dma.SDIO_TX.5.Priority=DMA_PRIORITY_LOW
-Dma.SDIO_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.0.Instance=DMA2_Stream0
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_NORMAL
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.ADC2.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC2.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC2.1.Instance=DMA2_Stream2
+Dma.ADC2.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC2.1.MemInc=DMA_MINC_ENABLE
+Dma.ADC2.1.Mode=DMA_NORMAL
+Dma.ADC2.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC2.1.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC2.1.Priority=DMA_PRIORITY_LOW
+Dma.ADC2.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=ADC1
+Dma.Request1=ADC2
+Dma.Request2=SDIO_RX
+Dma.Request3=SDIO_TX
+Dma.RequestsNb=4
+Dma.SDIO_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SDIO_RX.2.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SDIO_RX.2.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SDIO_RX.2.Instance=DMA2_Stream3
+Dma.SDIO_RX.2.MemBurst=DMA_MBURST_INC4
+Dma.SDIO_RX.2.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SDIO_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.SDIO_RX.2.Mode=DMA_PFCTRL
+Dma.SDIO_RX.2.PeriphBurst=DMA_PBURST_INC4
+Dma.SDIO_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SDIO_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SDIO_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.SDIO_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.SDIO_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SDIO_TX.3.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SDIO_TX.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SDIO_TX.3.Instance=DMA2_Stream6
+Dma.SDIO_TX.3.MemBurst=DMA_MBURST_INC4
+Dma.SDIO_TX.3.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SDIO_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.SDIO_TX.3.Mode=DMA_PFCTRL
+Dma.SDIO_TX.3.PeriphBurst=DMA_PBURST_INC4
+Dma.SDIO_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SDIO_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SDIO_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.SDIO_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 FATFS.BSP.number=1
 FATFS0.BSP.STBoard=false
 FATFS0.BSP.api=Unknown
@@ -147,8 +125,9 @@ FMC.SelfRefreshTime1=4
 FMC.WriteRecoveryTime1=3
 FREERTOS.BinarySemaphores01=myBinarySemI2C,Dynamic,NULL;myBinarySemUART,Dynamic,NULL
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configUSE_IDLE_HOOK,FootprintOK,configUSE_APPLICATION_TASK_TAG,configTOTAL_HEAP_SIZE,configUSE_TRACE_FACILITY,BinarySemaphores01
-FREERTOS.Tasks01=myTaskTank,16,128,StartTaskTank,Default,NULL,Dynamic,NULL,NULL;TouchGFXTask,24,4096,TouchGFX_Task,As external,NULL,Dynamic,NULL,NULL;myTaskI2C,24,128,StartTaskI2C,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,configUSE_IDLE_HOOK,FootprintOK,configUSE_APPLICATION_TASK_TAG,configTOTAL_HEAP_SIZE,configUSE_TRACE_FACILITY,BinarySemaphores01,Queues01
+FREERTOS.Queues01=myQueue1Left,16,uint16_t,0,Dynamic,NULL,NULL;myQueue1Middle,16,uint16_t,0,Dynamic,NULL,NULL
+FREERTOS.Tasks01=myTaskTank,16,512,StartTaskTank,Default,NULL,Dynamic,NULL,NULL;TouchGFXTask,24,4096,TouchGFX_Task,As external,NULL,Dynamic,NULL,NULL;myTaskI2C,24,1024,StartTaskI2C,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=75000
 FREERTOS.configUSE_APPLICATION_TASK_TAG=1
 FREERTOS.configUSE_IDLE_HOOK=1
@@ -325,8 +304,6 @@ MxCube.Version=6.7.0
 MxDb.Version=DB.6.0.70
 NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.DMA1_Stream0_IRQn=true\:1\:0\:true\:false\:true\:false\:false\:true\:true
-NVIC.DMA1_Stream6_IRQn=true\:1\:0\:true\:false\:true\:false\:false\:true\:true
 NVIC.DMA2D_IRQn=true\:5\:0\:true\:false\:true\:false\:true\:true\:true
 NVIC.DMA2_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
@@ -336,8 +313,6 @@ NVIC.DSI_IRQn=true\:5\:0\:true\:false\:true\:false\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.I2C1_ER_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true\:true
-NVIC.I2C1_EV_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true\:true
 NVIC.LTDC_IRQn=true\:5\:0\:true\:false\:true\:false\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
